<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    style="@style/AppBackground"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:layout_marginHorizontal="10dp"
            android:layout_marginTop="20dp"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/imageView2"
                style="@style/TitleIcon"
                android:src="@drawable/icon" />

            <TextView
                android:id="@+id/TextView"
                style="@style/TitleText"
                android:text="@string/main_title" />

        </LinearLayout>

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical" >

                <LinearLayout style="@style/ComponentTitle" >

                    <TextView
                        style="@style/TitleText"
                        android:textSize="22sp"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:text="@string/survey_title" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:background="@drawable/component_content"
                    android:layout_marginHorizontal="20dp"
                    android:padding="15dp"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:paddingBottom="10dp"
                        android:orientation="vertical">

                        <TextView
                            android:id="@+id/textView2"
                            style="@style/DialogueText"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/main_survey19" />

                        <CheckBox
                            android:id="@+id/CheckButton1"
                            style="@style/RadioText"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/survey_choice7" />

                        <CheckBox
                            android:id="@+id/CheckButton2"
                            style="@style/RadioText"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/survey_choice8" />

                        <CheckBox
                            android:id="@+id/CheckButton3"
                            style="@style/RadioText"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/survey_choice9" />

                        <CheckBox
                            android:id="@+id/CheckButton4"
                            style="@style/RadioText"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/survey_choice10" />

                        <CheckBox
                            android:id="@+id/CheckButton5"
                            style="@style/RadioText"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/survey_choice11" />

                        <CheckBox
                            android:id="@+id/CheckButton6"
                            style="@style/RadioText"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/survey_choice12" />

                    </LinearLayout>

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="70dp"
                    android:layout_marginHorizontal="10dp"
                    android:orientation="horizontal">

                    <Button
                        android:id="@+id/button2"
                        style="@style/ButtonMain"
                        android:padding="0dp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/back" />

                    <Button
                        android:id="@+id/button1"
                        style="@style/ButtonMain"
                        android:padding="0dp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/next" />
                </LinearLayout>

            </LinearLayout>

        </ScrollView>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>