<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    style="@style/AppBackground"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:layout_marginHorizontal="10dp"
            android:layout_marginTop="20dp"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/imageView2"
                style="@style/TitleIcon"
                android:src="@drawable/icon" />

            <TextView
                android:id="@+id/TextView"
                style="@style/TitleText"
                android:text="@string/main_title" />

        </LinearLayout>

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical" >

                <LinearLayout style="@style/ComponentTitle" >

                    <TextView
                        style="@style/TitleText"
                        android:textSize="22sp"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:text="@string/survey_title" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:background="@drawable/component_content"
                    android:layout_marginHorizontal="20dp"
                    android:padding="15dp"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:paddingBottom="10dp"
                        android:orientation="vertical">

                        <TextView
                            android:id="@+id/textView2"
                            style="@style/DialogueText"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/main_survey13" />

                        <RadioGroup
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:orientation="horizontal" >

                            <RadioButton
                                android:id="@+id/radioButton"
                                style="@style/RadioText"
                                android:layout_width="0dp"
                                android:layout_height="wrap_content"
                                android:layout_weight="1"
                                android:text="@string/answer_positive"/>

                            <RadioButton
                                android:id="@+id/radioButton2"
                                style="@style/RadioText"
                                android:layout_width="0dp"
                                android:layout_height="wrap_content"
                                android:layout_weight="1"
                                android:text="@string/answer_negative"/>

                        </RadioGroup>

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:paddingBottom="10dp"
                        android:orientation="vertical">

                        <TextView
                            android:id="@+id/textView3"
                            style="@style/DialogueText"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/main_survey14" />

                        <RadioGroup
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:orientation="horizontal" >

                            <RadioButton
                                android:id="@+id/radioButton3"
                                style="@style/RadioText"
                                android:layout_width="0dp"
                                android:layout_height="wrap_content"
                                android:layout_weight="1"
                                android:text="@string/answer_positive"/>

                            <RadioButton
                                android:id="@+id/radioButton4"
                                style="@style/RadioText"
                                android:layout_width="0dp"
                                android:layout_height="wrap_content"
                                android:layout_weight="1"
                                android:text="@string/answer_negative"/>

                        </RadioGroup>

                    </LinearLayout>


                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:paddingBottom="10dp"
                        android:orientation="vertical">

                        <TextView
                            android:id="@+id/textView4"
                            style="@style/DialogueText"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/main_survey15" />

                        <RadioGroup
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:orientation="horizontal" >

                            <RadioButton
                                android:id="@+id/radioButton7"
                                style="@style/RadioText"
                                android:layout_width="0dp"
                                android:layout_height="wrap_content"
                                android:layout_weight="1"
                                android:text="@string/answer_positive"/>

                            <RadioButton
                                android:id="@+id/radioButton8"
                                style="@style/RadioText"
                                android:layout_width="0dp"
                                android:layout_height="wrap_content"
                                android:layout_weight="1"
                                android:text="@string/answer_negative"/>

                        </RadioGroup>

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:paddingBottom="10dp"
                        android:orientation="vertical">

                        <TextView
                            android:id="@+id/textView5"
                            style="@style/DialogueText"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/main_survey16" />

                        <RadioGroup
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:orientation="horizontal" >

                            <RadioButton
                                android:id="@+id/radioButton9"
                                style="@style/RadioText"
                                android:layout_width="0dp"
                                android:layout_height="wrap_content"
                                android:layout_weight="1"
                                android:text="@string/answer_positive"/>

                            <RadioButton
                                android:id="@+id/radioButton10"
                                style="@style/RadioText"
                                android:layout_width="0dp"
                                android:layout_height="wrap_content"
                                android:layout_weight="1"
                                android:text="@string/answer_negative"/>

                        </RadioGroup>

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:paddingBottom="10dp"
                        android:orientation="vertical">

                        <TextView
                            android:id="@+id/textView6"
                            style="@style/DialogueText"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/main_survey17" />

                        <EditText
                            android:id="@+id/editText"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:ems="10"
                            android:inputType="number"
                            android:text="" />

                    </LinearLayout>
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:paddingBottom="10dp"
                        android:orientation="vertical">

                        <TextView
                            android:id="@+id/textView7"
                            style="@style/DialogueText"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="18) 평소 취침시간이 몇 시 입니까?(0시~23시)" />

                        <EditText
                            android:id="@+id/editText2"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:ems="10"
                            android:inputType="number"
                            android:text="" />

                    </LinearLayout>
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:paddingBottom="10dp"
                        android:orientation="vertical">

                        <TextView
                            android:id="@+id/textView8"
                            style="@style/DialogueText"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="19) 평소 기상시간이 몇 시 입니까?(0시~23시)"  />

                        <EditText
                            android:id="@+id/editText3"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:ems="10"
                            android:inputType="number"
                            android:text="" />

                    </LinearLayout>

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="70dp"
                    android:layout_marginHorizontal="10dp"
                    android:orientation="horizontal">

                    <Button
                        android:id="@+id/button2"
                        style="@style/ButtonMain"
                        android:padding="0dp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/back" />

                    <Button
                        android:id="@+id/button1"
                        style="@style/ButtonMain"
                        android:padding="0dp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/next" />
                </LinearLayout>

            </LinearLayout>

        </ScrollView>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>